# mcrypto

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt-qt6  FindOpenSSLHelper.cmake  README.md  mcrypto.cpp  mcrypto.doxyfile  mcrypto.h  mcrypto.pri  qaesencryption.cpp  qaesencryption.h
backend/: mcb_openssl.cpp  mcb_openssl.h  mcb_qaes.cpp  mcb_qaes.h
doc/branding/: milo-doxygen.css  milo-doxygen.scss  milo.js
example/: CMakeLists.txt  example.pro  main.cpp
scripts/: prepare_openssl_android.sh  prepare_openssl_common.sh  prepare_openssl_linux.sh  setenv-android.sh.example
tst_mcrypto/: CMakeLists.txt  tst_mcrypto.cpp  tst_mcrypto.pro
